--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+server.error.whitelabel.enabled = false
+
+jwt.expiration=3600000
+jwt.sign=specialTokenSecret
+
+jwt.headerName=Authorization
+jwt.prefix=Bearer 
