--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.jpa.show-sql=true
+
 server.error.whitelabel.enabled = false
 
 jwt.expiration=3600000
