--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>warehouse</groupId>
-    <artifactId>erp-client</artifactId>
+    <artifactId>erp-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>erp-client</name>
-    <description>erp-client</description>
+    <name>erp-server</name>
+    <description>erp-server</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
