--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Properties ###
+/src/main/resources/application-prod.properties
+/src/main/resources/jwt.properties
