--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,5 @@
-
-spring.datasource.url=jdbc:h2:mem:erp-warehouse
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.profiles.active=@spring.profiles.active@
 
 spring.jpa.show-sql=true
 
 server.error.whitelabel.enabled = false
-
-jwt.expiration=3600000
-jwt.sign=specialTokenSecret
-jwt.headerName=Authorization
-jwt.prefix=Bearer 
