--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,4 +4,4 @@ spring.datasource.password=
 
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL95Dialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
