--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.profiles.active=@spring.profiles.active@
 
 spring.jpa.show-sql=true
 
-server.error.whitelabel.enabled = false
+api.version=@api.version@
+module.name=@module.name@
